# DebrisTracer

./: README.md  install.sh
ttk/: <  CMakeLists.txt  ChangeLog.md
ttk/CMake/: Print.cmake  config.cmake  cpack_config.cmake  merge_tree_preprocess.xml
ttk/core/base/: TTKBaseConfig.cmake.in
ttk/core/base/abstractTriangulation/: AbstractTriangulation.h
ttk/core/base/arrayPreconditioning/: ArrayPreconditioning.h  psort.h
ttk/core/base/assignmentSolver/: AssignmentAuction.h
ttk/core/base/cinemaQuery/: CinemaQuery.cpp
ttk/core/base/clusteringMetrics/: ClusteringMetrics.cpp
ttk/core/base/common/: Debug.h  Os.h  welcomeMsg.inl
ttk/core/base/contourAroundPoint/: ContourAroundPoint.hpp
ttk/core/base/contourForests/: ContourForestsTemplate.h
ttk/core/base/contourTreeAlignment/: CTA_contourtree.h
ttk/core/base/debrisTracer/: CMakeLists.txt  DebrisTracer.cpp  DebrisTracer.h
ttk/core/base/delaunayRipsPersistenceDiagram/: CMakeLists.txt  DelaunayRipsPersistenceDiagram.cpp  DelaunayRipsPersistenceDiagram.h  dset.h  geoPH3.h  geoPHUtils.h  geoPHd.h
ttk/core/base/dimensionReduction/: CMakeLists.txt  DimensionReduction.cpp  DimensionReduction.h  dimensionReduction.py
ttk/core/base/dimensionReductionMetrics/: CMakeLists.txt  DimensionReductionMetrics.cpp  DimensionReductionMetrics.h
ttk/core/base/discreteGradient/: DiscreteGradient.cpp  DiscreteGradient.h  DiscreteGradient_Template.h
ttk/core/base/discreteMorseSandwich/: DiscreteMorseSandwich.h
ttk/core/base/discreteMorseSandwichMPI/: CMakeLists.txt  DiscreteMorseSandwichMPI.cpp  DiscreteMorseSandwichMPI.h
ttk/core/base/discreteVectorField/: CMakeLists.txt  DiscreteVectorField.cpp  DiscreteVectorField.h  DiscreteVectorField_Template.h
ttk/core/base/distanceMatrixDistortion/: DistanceMatrixDistortion.cpp
ttk/core/base/exTreeM/: ExTreeM.h
ttk/core/base/explicitTriangulation/: ExplicitTriangulation.cpp  ExplicitTriangulation.h
ttk/core/base/ftmTree/: FTMNode.h  FTMTreeUtils.cpp  FTMTreeUtils.h  FTMTreeUtils_Template.h  FTMTree_MT.h  FTMTree_Template.h
ttk/core/base/ftrGraph/: FTRGraph_Template.h
ttk/core/base/geometry/: Geometry.cpp  Geometry.h
ttk/core/base/implicitTriangulation/: ImplicitTriangulation.cpp  ImplicitTriangulation.h
ttk/core/base/integralLines/: IntegralLines.h
ttk/core/base/mergeTreeAutoencoder/: CMakeLists.txt  MergeTreeAutoencoder.cpp  (+1 more)
ttk/core/base/mergeTreeNeuralNetwork/: CMakeLists.txt  MergeTreeNeuralBase.cpp  MergeTreeNeuralBase.h  MergeTreeNeuralLayer.cpp  MergeTreeNeuralLayer.h  MergeTreeNeuralNetwork.cpp  MergeTreeNeuralNetwork.h  MergeTreeTorchUtils.cpp  MergeTreeTorchUtils.h
ttk/core/base/ripsPersistenceDiagram/: CMakeLists.txt  FastRipsPersistenceDiagram2.cpp  FastRipsPersistenceDiagram2.h  PairCells.cpp  PairCells.h  PairCellsWithOracle.cpp  PairCellsWithOracle.h  RipsPersistenceDiagram.cpp  RipsPersistenceDiagram.h  RipsPersistenceDiagramUtils.cpp  RipsPersistenceDiagramUtils.h  ripser.cpp  ripser.h
ttk/core/base/topologicalDimensionReduction/: CMakeLists.txt  DimensionReductionModel.cpp  DimensionReductionModel.h  TopologicalDimensionReduction.cpp  TopologicalDimensionReduction.h  TopologicalLoss.cpp  TopologicalLoss.h
ttk/examples/c++/: CMakeLists.txt
ttk/examples/vtk-c++/: CMakeLists.txt
ttk/paraview/: CMakeLists.txt
ttk/paraview/patch/: paraview-5.10.1-CMakeLists.txt.patch  paraview-5.11.0-NSIS64.patch  paraview-5.12.0-ApplicationComponents.patch  paraview-5.12.0-CPack.patch  paraview-5.13.0-ApplicationComponents.patch  paraview-5.13.0-CMakeLists.txt.patch  paraview-5.13.0-CPack.patch  paraview-5.13.0-NSIS64.patch  paraview-5.13.0-ParaViewOptions.cmake.patch  paraview-5.13.0-pqApplicationComponents.qrc.patch  paraview-5.13.0-pqExampleVisualizationsDialog.cxx.patch  paraview-5.13.0-vtkPVFileInformation.cxx.patch  paraview-6.0.1.patch  patch-paraview-5.12.0.sh  patch-paraview-5.13.0.sh  patch-paraview-6.0.1.sh
ttk/paraview/xmls/: ArrayEditor.xml  ArrayPreconditioning.xml  BlockAggregator.xml  CinemaProductReader.xml  CinemaReader.xml  DataSetToTable.xml  DebrisTracer.xml  DelaunayRipsPersistenceDiagram.xml  DelaunayRipsPersistenceGenerators.xml  DimensionReduction.xml  DimensionReductionMetrics.xml  DiscreteGradient.xml  DiscreteVectorField.xml  FlattenMultiBlock.xml  GeometrySmoother.xml  IcospheresFromPoints.xml  IntegralLines.xml  MergeBlockTables.xml  MergeTree.xml  MergeTreeAutoencoder.xml  MergeTreeAutoencoderDecoding.xml  MergeTreeClustering.xml  MergeTreeDistanceMatrix.xml  MergeTreePrincipalGeodesics.xml  MergeTreePrincipalGeodesicsDecoding.xml  MorseSmaleComplex.xml  PersistenceDiagram.xml  PersistentGenerators.xml  PointDataSelector.xml  PointSetToCurve.xml  PointSetToSurface.xml  ProjectionFromTable.xml  RipsPersistenceDiagram.xml  RipsPersistenceGenerators.xml  ScalarFieldNormalizer.xml  ScalarFieldSmoother.xml  SignedDistanceField.xml  TopologicalSimplification.xml  TopologicalSimplificationByPersistence.xml  TopologicalSkeleton.xml  (+2 more)
ttk/scripts/docker/: Dockerfile
ttk/standalone/DebrisTracer/: CMakeLists.txt  main.cpp
(+174 files in other folders)
